# Map-Conversion-3D-Voxel-Map-to-2D-Occupancy-Map

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
include/: HeightRangeMap.hh  Map2D.hh  MapConverter.hh  datatypes.hh
launch/: map_conversion.launch  map_conversion_oct.launch  map_conversion_ufo.launch  path_conversion.launch
mapconversion/: CMakeLists.txt  package.xml
mapconversion/include/: HeightRangeMap.hh  MapConverter.hh  datatypes.hh
mapconversion/launch/: map_conversion.launch.py  path_conversion.launch  path_conversion.launch.py
mapconversion/src/: MapConverter.cpp  map_conversion_oct_node.cpp  path_converter_node.cpp
mapconversion_msgs/: CMakeLists.txt  package.xml
mapconversion_msgs/msg/: SlopeMap.msg
msg/: HeightMap.msg  SlopeMap.msg
src/: MapConverter.cpp  map_conversion_node.cpp  map_conversion_oct_node.cpp  map_conversion_ufo_node.cpp  path_converter_node.cpp
